Fix #949 - Center dashboard stats vertically, remove whitespace, add slight padding

--- a/static/scss/partials/dashboard.scss
+++ b/static/scss/partials/dashboard.scss
@@ -5,8 +5,10 @@
 
 .mpp-dashbaord-header-name {
     font-weight: 700;
-    width:100%;
-    word-wrap:break-word;
+    width: 100%;
+    word-wrap: break-word;
+    padding-right:5%;
+
     span {
         font-weight: 400;
         display: block;
@@ -140,7 +142,7 @@
 @media screen and (min-width: 768px) {
     .mpp-dashbaord-header-container {
         display: flex;
-        align-items: flex-end;
+        align-items:center;
         justify-content: space-between;
     }    
     .mpp-dashbaord-header-title {
